# uselessgoddess-spira

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rustftml.toml
.cargo/: config.toml
assets/shaders/: fluid_compute.wgsl  inject.wgsl  lbm.wgsl  render.wgsl  volume_raymarching.wgsl
docs/: FLUID_SIMULATION_RESEARCH.md
src/: lib.rs  main.rs  physics.rs
src/fluid/: boundary.rs  mod.rs  params.rs  particle.rs  plugin.rs  render.rs  simulation.rs  solver.rs  spatial.rs
