[package]
name = "spira"
version = "0.1.0"
edition = "2021"
authors = ["uselessgoddess"]
description = "High-performance dental fluid simulation using Lattice Boltzmann Method"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.17", features = ["wayland"] }
bytemuck = { version = "1.14", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
